--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="container d-flex flex-column position-relative">
-      <h1 class="text-white text-center mb-3">Filter and Generate Mock</h1>
+      <h1 class="text-white text-center mb-3 heading"><a href="https://github.com/R35007/Filter-and-Generate-Mock">Filter and Generate Mock</a></h1>
       <div class="row bg-white p-3 py-4 m-0 flex-1 rounded">
         <div class="d-none loader-wrapper align-items-center justify-content-center position-absolute" id="loader-screen">
           <div class="loader"></div>
