--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Filter and Generate Mock</title>
   </head>
   <script src="https://kit.fontawesome.com/1515315868.js" crossorigin="anonymous"></script>
-  <!-- CSS only -->
   <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -41,7 +40,9 @@
               </div>
             </div>
           </div>
-          <div class="col-12 mt-2 flex-1 p-0"><textarea name="data" id="data" cols="30" rows="10" class="form-control"></textarea></div>
+          <div class="drop-area textarea-wrapper col-12 mt-2 flex-1 p-0 d-flex align-items-center justify-content-center" id="data-drop-area">
+            <textarea name="data" id="data" cols="30" rows="10" class="form-control"></textarea>
+          </div>
           <div class="col-12 mt-2 flex-initial p-0">
             <div class="input-group">
               <input
@@ -60,7 +61,9 @@
               </div>
             </div>
           </div>
-          <div class="col-12 mt-2 flex-1 p-0"><textarea name="schema" id="schema" cols="20" rows="10" class="form-control"></textarea></div>
+          <div class="textarea-wrapper col-12 mt-2 flex-1 p-0" id="schema-drop-area">
+            <textarea name="schema" id="schema" cols="20" rows="10" class="form-control"></textarea>
+          </div>
         </div>
         <div class="col-6 d-flex flex-column">
           <div class="row flex-initial">
@@ -101,4 +104,5 @@
   ></script>
 
   <script src="script.js"></script>
+  <script src="dragAndDrop.js"></script>
 </html>
