--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     role="tab"
                     aria-controls="data-JSON"
                     aria-selected="true"
-                    >JSON
+                    >Data
                   </a>
                 </li>
                 <li class="nav-item">
@@ -101,10 +101,10 @@
         <div class="col-6 h-100">
           <div class="d-flex">
             <div class="col">
-              <a href="#" id="filterData" class="btn btn-raised btn-primary m-0 w-100"> Filter Data by Schema</a>
+              <a href="#" id="filterData" class="btn btn-raised btn-primary m-0 w-100"> Filter Data</a>
             </div>
             <div class="col">
-              <a href="#" id="generateMock" class="btn btn-raised btn-primary m-0 w-100">Generate Mock From Data</a>
+              <a href="#" id="generateMock" class="btn btn-raised btn-primary m-0 w-100">Generate Mock</a>
             </div>
             <div class="col d-flex justify-content-end">
               <ul class="nav nav-pills" id="mock-tab" role="tablist">
@@ -117,7 +117,7 @@
                     role="tab"
                     aria-controls="mock-JSON"
                     aria-selected="true"
-                    >MOCK
+                    >Mock
                   </a>
                 </li>
                 <li class="nav-item">
