--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
         </div>
         <div class="col-6 h-100">
           <div class="d-flex">
-            <div class="col">
+            <div class="mr-3">
               <a href="#" id="filterData" class="btn btn-raised btn-primary m-0 w-100"> Filter Data</a>
             </div>
-            <div class="col">
+            <div>
               <a href="#" id="generateMock" class="btn btn-raised btn-primary m-0 w-100">Generate Mock</a>
             </div>
-            <div class="col d-flex justify-content-end">
+            <div class="flex-1 d-flex justify-content-end">
               <ul class="nav nav-pills" id="mock-tab" role="tablist">
                 <li class="nav-item">
                   <a
